Header hides on scroll down, reveals on scroll up. Sidebar stops squashing main content on small devices.

--- a/src/less/modules/header.less
+++ b/src/less/modules/header.less
@@ -86,7 +86,12 @@
     .header-fixed-when-pulled-down-mixin();
 
     &-squashed {
-      margin: if((@sidebar-is-left), 0 0 0 30%, 0 30% 0 0);
+
+      .atMedium({
+        /* this mixin is defined in sidebar.css */
+        .sidebar-squashes-main-mixin();
+      });
+      
     }
   }
   &-pushedUp {
