--- a/src/less/vars.less
+++ b/src/less/vars.less
@@ -101,12 +101,14 @@
 
 /* Sidebar */
 
+@sidebar-squashes-main: true;
 @sidebar-is-left: true;
 @sidebar-background-color: rgba(200, 200, 200, .94);
 @sidebar-bg-light: boolean(luma(@sidebar-background-color) > 40%);
 @sidebar-font-color-dark: #333333;
 @sidebar-font-color-light: #cccccc;
 @sidebar-padding: 1rem;
+@test1: true;
 
 
 
